<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_your_location">Set your location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="to_confirm_that_you_have_completed_the_job">To confirm that you have completed the job please create the activity from.</string>
    <string name="select_option">Select Option</string>
    <string name="confirm">Confirm</string>
    <string name="permission_deni">Permission Deni</string>
    <string name="turn_on_camera_permission_to_take_picture">Turn On Camera Permission To Take Picture</string>
    <string name="the_image_is_deleted">The Image is deleted.</string>
    <string name="filter">Filter</string>
    <string name="invoice">Invoice</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="printer">Printer</string>
    <string name="disconnect">Disconnect</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="int_text"><b>%d</b>\n<font color="#B3FFFFFF">INT</font></string>
    <string name="out_text"><b>%d</b>\n<font color="#B3FFFFFF">OUT</font></string>
    <string name="tax_text"><b>%d</b>\n<font color="#B3FFFFFF">TAX</font></string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="in_warranty">In Warranty</string>
    <string name="out_warranty">Out Warranty</string>
    <string name="tax_invoice">Tax-Invoice</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_new_passcode">Enter your new passcode</string>
    <string name="confirm_your_passcode">Confirm your passcode"</string>
</resources>