<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/nameItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qtyItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/qty"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideLine1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideLine2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideLine3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>