<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <data>
        <variable
            name="clickBackLocation"
            type="com.example.myapplication.ui.activity.CreateActivity.ClickCallbackAddress" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_your_location"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/app_title_text_16sp"
        android:paddingTop="@dimen/app_title_text_16sp"
        android:paddingHorizontal="@dimen/app_title_text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:name="com.example.myapplication.widget.MapContainer"
        app:layout_constraintTop_toBottomOf="@+id/titleLocation"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/app_title_text_16sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:onClick="@{()->clickBackLocation.onSave()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/app_title_text_16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:onClick="@{()->clickBackLocation.onCancel()}"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="@+id/textSaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textSaveBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
