<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="imageProfile"
            type="com.example.myapplication.model.ProfileModel" />

        <variable
            name="clickActionProfile"
            type="com.example.myapplication.ui.mainActivity.MainActivity.CallBackProfile" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/closeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_close"
        android:onClick="@{()->clickActionProfile.onClickClose()}"
        android:scaleType="center"
        android:background="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageIcon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        loadImage="@{imageProfile.imageProfile}"
        app:shapeAppearance="@style/ShapeAppearanceOverlayRound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIcon"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@{imageProfile.userName}"
        android:textSize="@dimen/app_title_text_16sp"
        app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
        android:layout_marginVertical="@dimen/app_title_text_16sp"
        tools:text="@tools:sample/full_names"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="@dimen/app_title_text_16sp"
        android:layout_marginHorizontal="@dimen/app_title_text_16sp"
        android:background="@drawable/custom_background_layout"
        app:layout_constraintTop_toBottomOf="@id/userNameText">

        <TextView
            android:id="@+id/phoneNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/phoneNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/us_phones"/>

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/full_names"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="@dimen/app_title_text_16sp"
        android:layout_marginHorizontal="@dimen/app_title_text_16sp"
        android:background="@drawable/custom_background_layout"
        app:layout_constraintTop_toBottomOf="@id/constraint1">

        <TextView
            android:id="@+id/printerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printer"
            android:textColor="@color/black"
            android:paddingTop="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/optionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:textSize="@dimen/app_tiny_text_12sp"
            app:layout_constraintTop_toBottomOf="@+id/printerTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconNext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            app:tint="@color/gray"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/changePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toBottomOf="@+id/optionText"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            app:tint="@color/gray"
            android:paddingVertical="@dimen/app_title_text_16sp"
            app:layout_constraintTop_toBottomOf="@+id/iconNext1"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:gravity="center"
        android:textColor="@color/color_red"
        android:textSize="@dimen/app_title_text_16sp"
        android:padding="@dimen/app_title_text_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
