<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="actionLogin"
            type="com.example.myapplication.ui.login.LoginActivity.ClickActionLoginCallback" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/app_title_text_16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="@dimen/app_title_text_16sp"
        style="?attr/textInputOutlinedStyle"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="@dimen/size_10dp"
        app:boxCornerRadiusTopEnd="@dimen/size_10dp"
        app:boxCornerRadiusTopStart="@dimen/size_10dp"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/color_white_light"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="@dimen/app_title_text_16sp"
        app:endIconMode="password_toggle"
        style="?attr/textInputOutlinedStyle"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="@dimen/size_10dp"
        app:boxCornerRadiusTopEnd="@dimen/size_10dp"
        app:boxCornerRadiusTopStart="@dimen/size_10dp"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/color_white_light"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/AppDisableButtonAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="Login"
        android:onClick="@{()->actionLogin.clickButtonLoginListener()}"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
